--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,39 @@
 .site-nav-link--current {
   color: orangered;
 }
+
+/* Modal Events */
+
+.backdrop {
+  top: 0;
+  left: 0;
+  position: fixed;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.3);
+
+  opacity: 0;
+  pointer-events: none;
+  visibility: hidden;
+
+  transition: opacity 250ms ease-in-out;
+}
+
+.modal {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+
+  width: 30%;
+  height: 30%;
+  padding: 20px;
+
+  background-color: beige;
+}
+
+.backdrop.backdrop-open {
+  opacity: 1;
+  visibility: visible;
+  pointer-events: all;
+}
